2003-03-13  Ray Tomlinson  <RTomlinson@bbn.com>

	* SimpleAgent.java:
	Bug #1848 -- Need persistence of component hierarchy for mobile agents
	Save agent component hierarchy in persistence snapshots.

2003-03-12  Ray Tomlinson  <RTomlinson@bbn.com>

	* service/event/EventServiceComponent.java: 
	Bug #2658 -- Components incompatible with automatic service revocation feature
	Test for null service before trying to use it.

2002-11-07  Todd Wright  <twright@bbn.com>

	* all
	Fixed imports.

2002-05-22  Ray Tomlinson  <RTomlinson@bbn.com>

	* service/scheduler/SchedulerServiceProvider.java:
	New default scheduler uses ThreadingService instead of real
	threads.

	* SimpleAgent.java:
	Use new ThreadService for creating the SchedulerServiceProvider.

2002-05-07  Ray Tomlinson  <RTomlinson@bbn.com>

	* service/scheduler/SchedulerServiceProvider.java:
	Use ThreadingService for new scheduler type that 
	* SimpleAgent.java:
	Add ThreadingServiceProvider. Use ThreadingService for
	SchedulerService.

2002-02-25  Ray Tomlinson  <RTomlinson@bbn.com>

	* ClusterImpl.java:
	Fix bug 1100
	Fix extraneous restart w.r.t. every newly discovered agent. Only
	restart w.r.t. agents with changed incarnation numbers.

2001-11-26  Ray Tomlinson  <RTomlinson@bbn.com>

	* Distributor.java:
	Implement restartAgent method: calls the blackboard restartAgent
	method and executes an empty transaction for the purpose of
	initiating the transmission of the resulting messages.
	Also, add the sending of messages to the Distributor log. This
	helps relate the sending of messages to other Distributor
	activity.

	* DirectiveMessage.java:
	Implement DirectiveWithChangeReports.toString by calling toString
	of the wrapped Directive.

	* ClusterImpl.java:
	Add restart logic -- Initiate restart actions with all other
	agents by resending tasks, asset transfers, etc. and by verifying
	received tasks, assets, etc. Maintain set of agents with which we
	have communicated (Directive messages sent or received).